--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,8 +21,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "imagekit": "^6.0.0",
+    "inngest": "^3.48.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3"
   },
   "devDependencies": {
