--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
     "@imagekit/nodejs": "^7.1.1",
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^3.0.3",
@@ -25,6 +27,7 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
+    "openai": "^6.15.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
