--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,7 +28,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "openai": "^6.15.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
