--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
+    "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
+    "react-apexcharts": "^1.9.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
