--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "openai": "^6.15.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
     "stripe": "^20.1.0"
   },
