--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,9 @@
     "@google/generative-ai": "^0.24.1",
     "@imagekit/nodejs": "^7.1.1",
     "@prisma/client": "^6.3.1",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
