Fix formatting in package.json scripts section

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "server": "nodemon server.js",
     "start": "node server.js",
-    "saveDB": "npx prisma migrate dev --name init",
-    "postinstall": "npx prisma migrate deploy"
+    "saveDB": "npx prisma migrate dev --name init"
+    
   },
   "keywords": [],
   "author": "",
